# chainpost-prototype

./: README.md  schema.sql
cloud-functions/cardano-validate-signature/: deploy  index.js  package-lock.json  package.json
server/: Cargo.toml  Dockerfile  deploy.sh
server/src/: main.rs
server/src/api/: auth.rs  logout.rs  mod.rs  post.rs
server/src/app/: auth.rs  home.rs  mod.rs  post.rs  profile.rs  search.rs
server/src/db/: mod.rs  posts.rs  users.rs
server/src/services/: check_auth.rs  get_uid.rs  mod.rs
server/templates/: auth.html  home.html  post.html  profile.html  search.html
