[package]
name = "chainpost-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4.0" }
serde = {version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.11.22", features = ["json"] }
log = "0.4.20"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
chrono = "0.4.31"
libsql-client = "0.32.0"
url = "2.4.1"
askama_actix = "0.14.0"
askama = { version = "0.12.1", features = ["with-actix-web"] }
actix-files = "0.6.2"
actix-cors = "0.6.0"
actix-form-data = "0.6.2"
csv = "1.1"